@@ -1,3 +1,12 @@
+2007-04-30  Timothee Lecomte  <timothee.lecomte@ens.fr>
+
+	* src/wxterminal/wxt_gui.cpp:
+        * src/wxterminal/wxt_gui.h:
+	(wxt_put_tmptext, wxtFrame::OnSetStatusText):
+	Change the text of the status bar asynchronously by sending a message to
+	the GUI thread instead of doing it in a mutex. This particular GUI
+	change from a separate thread was crashing on wxMac.
+
 2007-04-29  James R. Van Zandt  <jrv@vanzandt.comcast.net>
 
 	* man/gnuplot.1: Document environment variables and the
